--- a/.gitignore
+++ b/.gitignore
@@ -206,4 +206,5 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 .env
-docs/index.html   # not ignored on gh_pages branch
+# not ignored on gh_pages branch
+docs/index.html
