--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^1.2.1"
 bpython = "^0.26"
 python-dateutil = "^2.9.0.post0"
 requests = "^2.32.5"
+inflection = "^0.5.1"
 
 
 [build-system]
