--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,15 @@ requests = "^2.32.5"
 inflection = "^0.5.1"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^9.0.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.pytest.ini_options]
+addopts = [
+    "--import-mode=importlib",
+]
