--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,5 @@ build-backend = "poetry.core.masonry.api"
 
 
 [tool.pytest.ini_options]
-addopts = [
-    "--import-mode=importlib",
-]
+addopts = ["--import-mode=importlib", "-vv"]
+pythonpath = ["."]
