--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,5 +24,5 @@ build-backend = "poetry.core.masonry.api"
 
 
 [tool.pytest.ini_options]
-addopts = ["--import-mode=importlib", "-v"]
+addopts = ["--import-mode=importlib", "-vv"]
 pythonpath = ["."]
