--- a/.gitignore
+++ b/.gitignore
@@ -208,6 +208,9 @@ __marimo__/
 .env
 # not ignored on gh_pages branch
 docs/index.html
+docs/epstein_emails_word_count.html
+
+
 tester.py
 social_media_post_with_url.txt
 /scripts/epstein_files/**/*
