--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "epstein-text-messages-2"
-version = "0.1.0"
-description = ""
-authors = ["ashariyar <ashariyar@users.noreply.github.com>"]
+name = "epstein-py"
+version = "1.0.0"
+description = "Some tools for working with the Jeffrey Epstein documents released in November 2025."
+authors = ["Michel de Cryptadamus"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
