--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dateutil = "^2.9.0.post0"
 python-dotenv = "^1.2.1"
 rich = "^14.2.0"
 requests = "^2.32.5"
+datefinder = "^0.7.3"
 
 
 [tool.poetry.group.dev.dependencies]
