--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 license = "GPL-3.0-or-later"
 
 homepage = "https://michelcrypt4d4mus.github.io/epstein_text_messages/"
+repository = "https://github.com/michelcrypt4d4mus/epstein_text_messages"
 
 keywords = [
     "Epstein",
