--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,10 +44,10 @@ pytest = "^9.0.1"
 
 [tool.poetry.scripts]
 epstein_diff = 'epstein_files:epstein_diff'
-epstein_dump_urls = 'epstein_files:epstein_dump_urls'
 epstein_generate = 'epstein_files:generate_html'
 epstein_search = 'epstein_files:epstein_search'
 epstein_show = 'epstein_files:epstein_show'
+epstein_word_count = 'epstein_files:epstein_word_count'
 
 
 [tool.poetry.urls]
