--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ python-dateutil = "^2.9.0.post0"
 python-dotenv = "^1.2.1"
 requests = "^2.32.5"
 rich = "^14.2.0"
+rich-argparse-plus = "^0.3.1.4"
 
 
 [tool.poetry.group.dev.dependencies]
